src/components/MainNav/MainNav.css
@import '@folio/stripes-components/lib/variables.css';

.navRoot {
  display: flex;
  justify-content: space-between;
  align-content: stretch;
  width: 100%;
  border-bottom: 1px solid var(--color-border);
  flex: 0 0 auto;
  padding: 0 6px;
  background-color: #f7f7f7;
  z-index: 99999;
  position: relative;
}

.nowrap {
  white-space: nowrap;
}

.skipLink {
  position: absolute;
  display: block;
  padding: 6px 4px 0;
  top: -100px;
  transition: top 0.15s linear;

  &:focus {
    position: relative;
    top: 0;
  }
}

.navigationHeadline {
  position: absolute;
  height: 1px;
  width: 1px;
  clip-path: polygon(0 0, 0 0, 0 0);
  overflow: hidden;
}

@media (--medium-down) {
  .brandingLabel {
    display: none;
  }
}

